POC graphing with d3, fetching data from the server

--- a/src/client/src/assets/css/tracker-list.css
+++ b/src/client/src/assets/css/tracker-list.css
@@ -32,3 +32,10 @@
     transition: background 0.3s;
     cursor: pointer;
 }
+
+#tracker-input {
+    width: 100%;
+    margin: 5px 0 0 0;
+    padding: 0;
+    font-size: xx-small;
+}
