--- a/src/client/src/components/Login/Login.module.scss
+++ b/src/client/src/components/Login/Login.module.scss
@@ -1,1 +1,23 @@
-.Login {}
+.Login {
+
+  .LoginForm {
+    width: 300px;
+    height: 300px;
+    margin: auto;
+    padding-top: 150px;
+
+    label {
+      width: 100px;
+    }
+
+    .LoginFormFooter {
+      width: 100%;
+      text-align: right;
+
+      button {
+        margin-right: 10px;
+      }
+    }
+  }
+
+}
