Styling the profile modal that opens from the mini profile in the header

--- a/src/client/src/App.scss
+++ b/src/client/src/App.scss
@@ -57,3 +57,27 @@
     transform: rotate(360deg);
   }
 }
+
+.accounts-modal {
+  width: 90vw;
+  max-width: 90vw;
+
+  height: 80vh;
+  max-height: 80vh;
+
+  .modal-content {
+    height: 100%;
+
+    .modal-body {
+      padding: 0;
+
+      .nav-item {
+        padding-left: 1rem;
+      }
+
+      .nav-item + .nav-item {
+        border-top: black solid 1px;
+      }
+    }
+  }
+}
