Another big chart refactor, things are getting complicated

--- a/src/client/src/components/Accounts/Accounts.module.scss
+++ b/src/client/src/components/Accounts/Accounts.module.scss
@@ -45,6 +45,11 @@
       font-weight: lighter;
       font-style: italic;
     }
+
+    .AccountItemRefresh {
+      float: right;
+      display: inline-block;
+    }
   }
 
 }
