--- a/src/client/src/components/Investments/HoldingsList/HoldingsList.module.scss
+++ b/src/client/src/components/Investments/HoldingsList/HoldingsList.module.scss
@@ -1,5 +1,5 @@
 .HoldingsList {
-  width: 250px;
+  width: 100%;
   max-height: 100%;
   font-size: 0.8em;
 
@@ -12,32 +12,35 @@
 
 .HoldingsListItem {
   border: #041901 solid 1px;
-  min-height: 40px;
   padding: 0;
+  cursor: pointer;
 
   .HoldingsListItemSymbol {
     width: 100%;
     border-bottom: solid 1px black;
-    height: 30px;
     font-size: 0.9em;
     background: #5FA23F;
     color: #0C4102;
+    margin-bottom: 0;
   }
 
   .HoldingListItemDetail {
 
     .HoldingListItemDetailQuantity {
       font-weight: bolder;
+      margin-right: 0.2em;
     }
 
     .HoldingListItemDetailCost {
       font-weight: bolder;
+      margin: 0 0.2em;
     }
   }
 
   .HoldingListItemTimestamp {
     font-weight: lighter;
     font-size: 0.7em;
+    margin-bottom: 0;
   }
 
 }
