--- a/src/client/src/components/Investments/Investments.module.scss
+++ b/src/client/src/components/Investments/Investments.module.scss
@@ -1,14 +1,14 @@
 .Investments {
-  height: 100%;
-  max-height: 100%;
+  height: max-content;
+  max-height: max-content;
 }
 
 .InvestmentTabs {
+}
 
-  .InvestmentTabContent {
-    height: 100%;
-    max-height: 100%;
-  }
+.InvestmentTabContent {
+  height: 100%;
+  max-height: 100%;
 }
 
 .InvestmentAccount {
