--- a/src/client/src/components/Investments/HoldingsList/HoldingsList.module.scss
+++ b/src/client/src/components/Investments/HoldingsList/HoldingsList.module.scss
@@ -18,6 +18,11 @@
     height: auto;
   }
 
+  .HoldingListItemLoading {
+    font-size: 0.6em;
+    font-weight: lighter;
+  }
+
   .HoldingsListItemSymbol {
     width: 100%;
     border-bottom: solid 1px black;
