Some styling and story book work

--- a/src/client/src/App.scss
+++ b/src/client/src/App.scss
@@ -1,16 +1,7 @@
-@import './variables';
+@import './mp-theme';
 
 .App {
   text-align: center;
-  background: $background;
-  height: 100%;
-  max-height: 100%;
-  color: $text;
-}
-
-.content {
-  height: 100%;
-  max-height: 100%;
 }
 
 #unconfigured {
