--- a/src/client/src/variables.scss
+++ b/src/client/src/variables.scss
@@ -3,5 +3,7 @@ $olive-green: #0C4102;
 $light-green: #5FA23F;
 $rich-green: #0D4508;
 
-$background: $dark-green;
-$text: $light-green;
+$background: #000d05;
+$text: #6dc98f;
+$link: #19a64d;
+$link-hover: #34e073;
