--- a/src/client/src/variables.scss
+++ b/src/client/src/variables.scss
@@ -1,9 +1,16 @@
-$dark-green: #072803;
-$olive-green: #0C4102;
-$light-green: #5FA23F;
-$rich-green: #0D4508;
-
 $background: #000d05;
+$background-dark: #000d05;
+$background-light: #6dc98f;
+
 $text: #6dc98f;
+$text-light: #6dc98f;
+$text-dark: #000d05;
+
 $link: #19a64d;
 $link-hover: #34e073;
+
+$primary-highlight: #bdf4bc;
+$secondary-highlight: #69ca98;
+
+$border-primary: #112423;
+$border-secondary: #39444B;
