--- a/src/client/src/components/Investments/InvestmentPerformance/InvestmentPerformance.module.scss
+++ b/src/client/src/components/Investments/InvestmentPerformance/InvestmentPerformance.module.scss
@@ -1,1 +1,15 @@
-.InvestmentPerformance {}
+.InvestmentPerformance {
+
+}
+
+.InvestmentPerformanceHeader {
+  h1 {
+    display: inline-block;
+  }
+
+}
+
+.InvestmentPerformanceChartControls {
+  display: inline-block;
+  padding-top: 1em;
+}
