--- a/src/client/src/variables.scss
+++ b/src/client/src/variables.scss
@@ -1,16 +1,33 @@
-$background: #000d05;
-$background-dark: #000d05;
-$background-light: #6dc98f;
+$mp-dark-grey: #0E1B26;
+$mp-mid-grey: #283740;
+$mp-light-grey: #384D59;
+$mp-dark-green: #022612;
+$mp-mid-green: #07401B;
+$mp-light-green: #5ABF69;
+$mp-ultra-light-green: #AEF2B9;
+$mp-white: #C9F2E3;
+$mp-light-blue: #6295D9;
+$mp-blue: #2B718C;
+$mp-bright-yellow: #D9B91A;
+$mp-mid-brown: #593B03;
+$mp-tan: #F28B50;
+$mp-dark-brown: #261901;
+$mp-bright-red: #A60303;
+$mp-red: #590202;
 
-$text: #6dc98f;
-$text-light: #6dc98f;
-$text-dark: #000d05;
+$background-dark: $mp-dark-green;
+$background-light: $mp-mid-green;
+$background: $background-dark;
+
+$text-light: $mp-light-green;
+$text-dark: $mp-dark-green;
+$text: $text-light;
 
 $link: #19a64d;
 $link-hover: #34e073;
 
-$primary-highlight: #bdf4bc;
-$secondary-highlight: #69ca98;
+$primary-highlight: $mp-ultra-light-green;
+$secondary-highlight: $mp-light-green;
 
-$border-primary: #112423;
-$border-secondary: #39444B;
+$border-primary: $mp-mid-grey;
+$border-secondary: $mp-light-grey;
