--- a/src/client/src/components/SymbolTracker/SymbolTracker.module.scss
+++ b/src/client/src/components/SymbolTracker/SymbolTracker.module.scss
@@ -8,6 +8,6 @@
   .SymbolChipList {
     margin: 20px auto 20px auto;
     align-content: center;
-    border: 1px solid $olive-green;
+    border: 1px solid $border-secondary;
   }
 }
