--- a/src/client/public/styles/mp-theme.module.scss
+++ b/src/client/public/styles/mp-theme.module.scss
@@ -1,5 +1,5 @@
-@import 'variables.module';
-@import './fonts';
+@import '_variables.module';
+@import '_fonts.module';
 
 html, body {
   font-family: 'Dosis', sans-serif;
