--- a/src/client/public/styles/_fonts.module.scss
+++ b/src/client/public/styles/_fonts.module.scss
@@ -1,1 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Dosis&family=Share&display=swap');
+
+html, body {
+  font-family: 'Dosis', sans-serif;
+}
