kinda fixed the toolbar styles

--- a/src/client/src/components/shared/Grid/Grid.module.scss
+++ b/src/client/src/components/shared/Grid/Grid.module.scss
@@ -2,6 +2,10 @@
   padding: 0.3em;
 
   :global {
+    .row {
+      margin-left: 0.3em;
+      margin-right: 0.3em;
+    }
     .row + .row {
       margin-top: 0.3em;
       margin-bottom: 0.3em;
