--- a/src/client/styleguide/Styleguide.scss
+++ b/src/client/styleguide/Styleguide.scss
@@ -1,2 +1,1 @@
-@import '~bootstrap/dist/css/bootstrap.min.css';
-@import '../public/styles/variables.module';
+@import '../public/styles/mp-theme.module';
