--- a/src/client/src/components/shared/Panel/Panel.module.scss
+++ b/src/client/src/components/shared/Panel/Panel.module.scss
@@ -1,7 +1,6 @@
 @import "../../../../public/styles/variables.module";
 
 .Panel {
-  border: 1px solid $border-primary;
   padding: 6px;
 
   :global {
@@ -15,7 +14,7 @@
 }
 
 .PanelTitle {
-  border-bottom: 1px solid $border-primary;
+  border-bottom: 1px solid inherit;
   margin-top: -7px;
   margin-left: -7px;
   margin-right: -7px;
@@ -37,7 +36,7 @@
 }
 
 .PanelFooter {
-  border-top: 1px solid $border-primary;
+  border-top: 1px solid inherit;
   margin-bottom: -7px;
   margin-left: -7px;
   margin-right: -7px;
