--- a/src/client/src/components/shared/Button/Button.module.scss
+++ b/src/client/src/components/shared/Button/Button.module.scss
@@ -1,22 +1,19 @@
 @import "./../../../../public/styles/colors.module";
 
+:global {
+  .btn-full {
+    display: block;
+    width: 100%;
+    margin: 0.3em;
+  }
+}
+
 .Button, .IconButton {
 }
-
-.Button.btn-full {
-  display: block;
-  width: 100%;
-  margin: 0.3em;
-}
-
 
 .IconButton {
   padding: 0;
   border-radius: 0;
   width: 2em;
   height: 2em;
-}
-
-.IconButton + .IconButton {
-  border-left: none;
 }
