--- a/src/client/src/components/shared/Panel/Panel.module.scss
+++ b/src/client/src/components/shared/Panel/Panel.module.scss
@@ -20,7 +20,7 @@
   margin-top: -7px;
   margin-left: -7px;
   margin-right: -7px;
-  padding: 0.3em;
+  padding: 0 0.6em;
   position: relative;
   min-height: 2.5em;
   line-height: 2.5em;
@@ -49,7 +49,7 @@
   margin-bottom: -7px;
   margin-left: -7px;
   margin-right: -7px;
-  padding: 0.3em;
+  padding: 0.6em 0.9em;
   text-align: right;
 
   :global {
