--- a/src/client/src/components/shared/Toolbar/Toolbar.module.scss
+++ b/src/client/src/components/shared/Toolbar/Toolbar.module.scss
@@ -4,27 +4,22 @@
   border-width: 1px;
   border-style: solid;
 
+  padding: 0;
+  margin: 0;
+
   :global {
     .btn {
       box-shadow: none;
       background-color: transparent;
     }
+    .col {
+      padding: 0;
+      margin: 0;
+    }
   }
 }
 
 .Toolbar {
-  border-width: 0 0 1px 0;
-
-  // don't collapse this or it loses specificity
-  margin-top: -11px;
-  margin-left: -0.6em;
-  margin-right: -0.6em;
-  margin-bottom: 0;
-
-  .ToolbarCol {
-    padding: 0;
-  }
-
   :global {
     .btn + .btn {
       border-left-style: solid;
@@ -39,10 +34,6 @@
 
 .ToolbarVertical {
   width: 2em;
-  padding: 0;
-  margin: -10px 0 0 -0.9em;
-  border-width: 0 1px 0 0;
-
   :global {
     .btn + .btn {
       border-top-style: solid;
