Redux turned into recoil

--- a/src/client/public/styles/_buttons.scss
+++ b/src/client/public/styles/_buttons.scss
@@ -45,6 +45,10 @@
 .btn-link {
   border: none;
   box-shadow: none;
+
+  &:focus, &:active {
+    background-color: transparent;
+  }
 }
 
 .btn-xl {
