Styling some header elements

--- a/src/client/public/styles/mp-theme.module.scss
+++ b/src/client/public/styles/mp-theme.module.scss
@@ -127,6 +127,12 @@
     }
   }
 
+  .mp-nav-row {
+    .mp-market-tracker {
+      margin-bottom: 0.3em;
+    }
+  }
+
   .mp-nav-col {
     .mp-nav-bg {
       height: 100%;
