--- a/src/client/src/apps/profile/Profile.module.scss
+++ b/src/client/src/apps/profile/Profile.module.scss
@@ -1,3 +1,12 @@
+@import "../../../public/styles/variables.module";
+
 .Profile {
 
+}
+
+.Login {
+  max-width: 70%;
+  margin: auto;
+  background: $mp-white;
+  text-align: center;
 }
